force-app/main/default/objects/Vehicle_Inspection__c/Vehicle_Inspection__c.object-meta.xml
<CustomObject>
    <label>Vehicle Inspection</label>
    <nameField>
        <displayFormat>VI-{00000}</displayFormat>
        <label>Vehicle Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>