force-app/main/default/objects/Vehicle_Inspection__c/fields/Adhered_to_tire_tread_depth_gauge_guide__c.field-meta.xml
<CustomField>
    <fullName>Adhered_to_tire_tread_depth_gauge_guide__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Adhered to tire tread depth gauge guide</label>
    <type>Checkbox</type>
</CustomField>