force-app/main/default/objects/Vehicle_Inspection__c/fields/Brakes_Passed_Pump_Test__c.field-meta.xml
<CustomField>
    <fullName>Brakes_Passed_Pump_Test__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Brakes Passed Pump Test</label>
    <type>Checkbox</type>
</CustomField>