force-app/main/default/objects/Vehicle_Inspection__c/fields/Doors_Close_and_Lock__c.field-meta.xml
<CustomField>
    <fullName>Doors_Close_and_Lock__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Doors Close and Lock</label>
    <type>Checkbox</type>
</CustomField>