force-app/main/default/objects/Vehicle_Inspection__c/fields/First_Aid_Kit_OK__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Kit_OK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>First Aid Kit OK</label>
    <type>Checkbox</type>
</CustomField>