force-app/main/default/objects/Vehicle_Inspection__c/fields/Fluids_Levels_OK__c.field-meta.xml
<CustomField>
    <fullName>Fluids_Levels_OK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fluids Levels OK</label>
    <type>Checkbox</type>
</CustomField>