force-app/main/default/objects/Vehicle_Inspection__c/fields/Horn_and_Back_up_Beeper_OK__c.field-meta.xml
<CustomField>
    <fullName>Horn_and_Back_up_Beeper_OK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Horn and Back up Beeper OK</label>
    <type>Checkbox</type>
</CustomField>