force-app/main/default/objects/Vehicle_Inspection__c/fields/Ladder_in_Good_Working_Order__c.field-meta.xml
<CustomField>
    <fullName>Ladder_in_Good_Working_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>I have inspected my ladder assigned to me by Citron Hygiene and it is free of signs of rust and corrosion, damaged or broken steps, missing or damaged feet, broken bracers and any signs of damage.</inlineHelpText>
    <label>Ladder in Good Working Order</label>
    <type>Checkbox</type>
</CustomField>