force-app/main/default/objects/Vehicle_Inspection__c/fields/Light_and_Indicators_OK__c.field-meta.xml
<CustomField>
    <fullName>Light_and_Indicators_OK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Light and Indicators OK</label>
    <type>Checkbox</type>
</CustomField>