force-app/main/default/objects/Vehicle_Inspection__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Vehicle Inspections</relationshipLabel>
    <relationshipName>Vehicle_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>