force-app/main/default/objects/Vehicle_Inspection__c/fields/Mirrors_OK__c.field-meta.xml
<CustomField>
    <fullName>Mirrors_OK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mirrors OK</label>
    <type>Checkbox</type>
</CustomField>