force-app/main/default/objects/Vehicle_Inspection__c/fields/No_Fluid_Leaks__c.field-meta.xml
<CustomField>
    <fullName>No_Fluid_Leaks__c</fullName>
    <defaultValue>true</defaultValue>
    <label>No Fluid Leaks</label>
    <type>Checkbox</type>
</CustomField>