force-app/main/default/objects/Vehicle_Inspection__c/fields/Ownership_and_Insurance_Valid__c.field-meta.xml
<CustomField>
    <fullName>Ownership_and_Insurance_Valid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ownership and Insurance Valid</label>
    <type>Checkbox</type>
</CustomField>