force-app/main/default/objects/Vehicle_Inspection__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Vehicle Inspections</relationshipLabel>
    <relationshipName>Vehicle_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>