force-app/main/default/objects/Vehicle_Inspection__c/fields/Spill_Kit_OK__c.field-meta.xml
<CustomField>
    <fullName>Spill_Kit_OK__c</fullName>
    <label>Spill Kit OK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>