force-app/main/default/objects/Vehicle_Inspection__c/fields/Vehicle_Inspection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Inspection_Notes__c</fullName>
    <label>Vehicle Inspection Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>