force-app/main/default/objects/Vehicle_Inspection__c/fields/Vehicle_License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_License_Plate_Number__c</fullName>
    <label>Vehicle License Plate Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>